# grimoire

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  go.mod  go.sum
adapters/: README.md
adapters/gdscript/: README.md  audit_test.go  call_emission.go  call_parser.go  call_resolution.go  callable_flow.go  callable_maps.go  dataflow.go  dataflow_test.go  declarations.go  dependencies.go  expressions.go  extends.go  go.mod  jsonl.go  lexer.go  main.go  main_test.go  model.go  project_config.go  relationships.go  repository.go  semantic_bindings.go  semantic_model.go
adapters/generic/: README.md  adapter_test.go  analyze.go  go.mod  parse.go
adapters/go/: README.md  facts.go  (+27 more)
adapters/rust/: Cargo.toml  README.md
adapters/rust/src/: call_model.rs  call_resolution.rs  call_support.rs  cli.rs  contract.rs  dataflow.rs  declarations.rs  dependencies.rs  discovery.rs  emit.rs  expr_eval.rs  expr_values.rs  extractor.rs  flow.rs  implementations.rs  imports.rs  items.rs  main.rs  model.rs  orchestrator.rs  paths.rs  relationships.rs  resolve.rs  semantic.rs  syntax.rs  tests.rs  type_resolution.rs
adapters/rust/tests/fixtures/build_fixture/: Cargo.toml
adapters/rust/tests/fixtures/build_fixture/src/: lib.rs
adapters/rust/tests/fixtures/dev_fixture/src/: lib.rs
adapters/rust/tests/fixtures/nested_repository/native/vector-engine/crates/cli/src/: main.rs
adapters/rust/tests/fixtures/nested_repository/native/vector-engine/crates/core/: Cargo.toml
adapters/rust/tests/fixtures/sample/: Cargo.toml
adapters/rust/tests/fixtures/sample/src/: child.rs  lib.rs
adapters/rust/tests/fixtures/target_fixture/src/: lib.rs
arcana/: .gitattributes  .gitignore  README.md
cmd/: README.md
docs/: APPLICATION.md  DEVELOPMENT.md  GO_ADAPTER_VALIDATION.md  INDEX.md  LEXICON_CONTRACT.md  README.md  RELEASE_PACKAGING.md  SEMANTIC_ACCEPTANCE.md  STATUS.md
evaluation/: README.md  corpus.json  inventory_workspace.py  run_retrieval_suite.py  run_tests.py
internal/: README.md
lexicon/: README.md
native/vector-engine/: Cargo.toml  README.md
native/vector-engine/crates/cli/: Cargo.toml
native/vector-engine/crates/cli/src/: main.rs
native/vector-engine/crates/core/: Cargo.toml
native/vector-engine/crates/core/src/: error.rs  format.rs  lib.rs  materialize.rs  materialize_format.rs  object.rs  object_format.rs  search.rs  snapshot.rs  transport.rs
native/vector-engine/crates/ffi/: Cargo.toml
native/vector-engine/crates/ffi/include/: grimoire_vector.h
native/vector-engine/crates/ffi/src/: boundary.rs  lib.rs  snapshot_api.rs  state.rs  storage_api.rs
spec/: facts-v1.md  snapshots-v1.md
src/: cli.rs  cli_commands.rs  cli_query.rs  cli_sync_tests.rs  cli_tests.rs  cli_update.rs  cli_update_tests.rs  lib.rs  main.rs
tools/: package_release.py  semantic_report.py  smoke_app.py  test_semantic_report.py  validate_jsonl.py
(+762 files in other folders)
