[package]
name = "arcana"
version = "0.1.0"
edition = "2024"
description = "An independent repository-graph foundation"
publish = false

[lib]
name = "arcana"
path = "src/lib.rs"

[[bin]]
name = "arcana"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lints.rust]
unsafe_code = "forbid"
