[package]
name = "arcana"
version = "0.1.0"
edition = "2024"
description = "An independent repository-graph foundation"
publish = false

[lib]
name = "arcana"
path = "src/lib.rs"

[[bin]]
name = "arcana"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
atomicwrites = "0.4"
fs2 = "0.4"
serde_json = "1"
sha2 = "0.10"

[lints.rust]
unsafe_code = "forbid"
