[workspace]
members = ["crates/core", "crates/ffi", "crates/cli"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
rust-version = "1.90"
version = "0.1.0"

[workspace.dependencies]
blake3 = "1.8"
bytemuck = "1.23"
memmap2 = "0.9"
rayon = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.20"
